@@ -2136,11 +2136,10 @@ ipmi_oem_dell_get_system_info (ipmi_oem_state_data_t *state_data)
                       "%s\n",
                       string);
     }
-  else if (!strcasecmp (state_data->prog_data->args->oem_options[0], "slot-number")
-           || !strcasecmp (state_data->prog_data->args->oem_options[0], "blade-slot-info"))
+  else if (!strcasecmp (state_data->prog_data->args->oem_options[0], "blade-slot-info"))
     {
       if (_get_dell_system_info_long_string (state_data,
-                                             IPMI_SYSTEM_INFO_PARAMETER_OEM_DELL_SLOT_NUMBER,
+                                             IPMI_SYSTEM_INFO_PARAMETER_OEM_DELL_BLADE_SLOT_INFO,
                                              string,
                                              IPMI_OEM_DELL_SYSTEM_INFO_MAX_STRING_BYTES) < 0)
         goto cleanup;
